welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:2: error: '=' expected but ';' found.
  var n;
       ^